# hypixel-calculator

./: .gitignore  CMakeLists.txt  README.md  drop_chance_calculator.cpp  drop_chance_calculator.h  farming.cpp  farming.h  helper.h  helper.hpp  hypixelCalculator.cpp  mining.cpp  mining.h  minion_calculator.cpp  minion_calculator.h
data/: item_buy_requirements.json  item_recipes.json  item_recipes_new.json  items.json  minion_fuels.json  minions.json  settings.json  styles.json
global_src/: buy_requirements.cpp  buy_requirements.h  crafting_recipe.cpp  crafting_recipe.h  drop_data.cpp  drop_data.h  item.cpp  item.h  minion.cpp  minion.h  minion_fuel.cpp  minion_fuel.h
imgui/: imgui_util.cpp  imgui_util.h
include/hypixel-calculator/: buy_requirements.h  color.hpp  crafting_recipe.h  drop_chance_calculator.h  drop_data.h  farming.h  item.h  item_xp_drop.h  minion.h  minion_calculator.h  minion_fuel.h
include/imgui/: imgui_util.cpp  imgui_util.h
minions/: minion_calculator.cpp  minion_calculator.h
src/: buy_requirements.cpp  buy_requirements.h  color.hpp  crafting_recipe.cpp  crafting_recipe.h  drop_chance_calculator.cpp  drop_data.cpp  drop_data.h  farming.cpp  fuel_calculation_data.h  item.cpp  item.h  item_xp_drop.cpp  item_xp_drop.h  mining.cpp  minion.cpp  minion.h  minion_calculation_data.h  minion_calculator.cpp  minion_fuel.cpp  minion_fuel.h  settings_data.hpp  style_config.cpp  style_config.h
